// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with a single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $94.34
  </h2>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totaling 
    $94.34
  </h2>
</div>
`;
